test/Fail/Issue2776.err
Issue2776.agda:15.8-11: error: [UnequalTypes]
The type
  (z : C) {y : D} (x : Set) → D → Set₁
is not a subtype of
  Set
when checking that the expression M.G has type Set
